fixing vertical-align

--- a/packages/ds/core/tokens/checkbox/_checkbox.scss
+++ b/packages/ds/core/tokens/checkbox/_checkbox.scss
@@ -26,7 +26,7 @@
     margin: token-size.$form-control-margin;
     box-sizing: border-box;
     box-shadow: token-size.$border-style;
-    vertical-align: bottom;
+    vertical-align: middle;
     cursor: pointer;
     display: inline-flex;
 
